# IA

./: README.md
Actividades/Actividad-RedNeuronal-1/: Documentacion.md
Actividades/RegresionLineal/: documentacion.md
Actividades/puntosFaciales/: Documentacion.md  puntosFaciales.py
Evaluacion/: EvaluRedesNeuronalesMediapipe.md
Herramientas/Ejemplos/: ejemplo2.py  ejemplo3.py  ejemplo8.py  ejemplo9.py  pyproject.toml
Herramientas/hardcascade/: FISHERFACE.py  LBPH.py  face.py  genDataSet.py  xmlFISHERFACE.py  xmlLBPH.py
Proyectos/Proyecto-1/: a_star.py  documentacion.md  pyproject.toml  requirements.txt
Proyectos/Proyecto-2/: arbolDecision.py  documentación.md  game.py  pyproject.toml  requirements.txt
Proyectos/Proyecto-2/arboles/: decision_tree  decision_tree2  decision_tree3  decision_treeT
Proyectos/Proyecto-3/: documentación.md
Proyectos/Proyecto-3/documents/aborto/: Consideraciones ético-juridicas del aboroto.txt  El dilema etico del aborto.txt
Proyectos/Proyecto-3/documents/eutanasia/: Eutanasia y dignidad.txt  Vista de Eutanasia.txt  el derecho a morir con dignidad.txt  eutanasia empatia compasion y dignidad.txt
