[tool.poetry]
name = "game"
version = "0.1.0"
description = "Proyecto numero 2 para Inteligencia Artificial, en el proyecto de Phaser con python será necesario"
authors = ["Hiram Abif Cornejo Cornejo <hiramcornejo10@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
opencv-contrib-python = "*"
sift = "*"
scikit-learn = "*"
numpy = "*"
pandas = "*"
pygame = "*"
matplotlib = "*"
tensorflow = "*"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"